zeit.vgwort changes
===================

0.4.3 (unreleased)
------------------

- Nothing changed yet.


0.4.2 (2011-11-13)
------------------

- Remove VGWort properties after an object has been copied (#9451)


0.4.1 (2011-08-16)
------------------

- Store claimable tokens as str instead of some strange SOAP data type.


0.4.0 (2011-08-16)
------------------

- Report the freetext authors if no structured authors are available. VGWort
  will do some matching then.

- Report authors without vgwort id

- Added /komplettansicht to report url

- Removed the mostly useles CSV export. We need to find useful ways for
  reporting.

- Make claiming a token transaction-independent (#9430).


0.3.1 (2011-06-22)
------------------

- Fix reportable query so the query server actually returns results.


0.3.0 (2011-06-20)
------------------

- Consume less memory during the actual report to VGWort.
- Report all (otherwise applicable) documents, not only currently published
  ones (#9092).
- Transmit the "product" as an additional author (#9033).


0.2.0 (2010-07-07)
------------------

- Cronjob to automatically order new tokens (#7326).
- Cronjob to automatically report documents (#7216).
- UI to view reporting results (#7546)


0.1.0 (2010-05-17)
------------------

* first release